# blueprint

./: .gitignore  CMakeLists.txt  README.md
codegen/: token_kind_generator.py  token_kind_header.py
doc/: grammar.md
headers/: FileReader.hpp  FileTokenizer.hpp  MacroLogger.hpp  Node.hpp  Parser.hpp  Token.hpp  TokenKind.hpp  TokenType.hpp  Tokenizer.hpp
src/: FileReader.cpp  FileTokenizer.cpp  Node.cpp  Parser.cpp  Token.cpp  TokenKind.cpp  TokenType.cpp  Tokenizer.cpp  main.cpp
